# golden-pond

./: .gitignore  Musiclib.hs  README.md  examples.hs  musiclib.hs  tests.hs
attic/original_handwritten_fl_studio/: goldenpond.pyscript
attic/sonic-pi/: modern-japanese-chord-progression.rb
current/fl studio/: goldenpond.pyscript
current/haxe/: .gitignore  ChordFactory.hx  ChordParser.hx  ChordThing.hx  Mode.hx  README.md  TestGoldenPond.hx  build-cpp.hxml  build-java-lib.sh  build-java.hxml  build-js.hxml  build-py.hxml  js-site.hxml  js-tests.hxml  makeall.sh  overview.md  py-lib.hxml  py-tests.hxml  run-java.sh  test-on-java.sh  test.sh  test_goldenpond.py
current/haxe/for-distribution/examples/: midi.py  midi_example.py  test_lib.py
current/haxe/for-distribution/fl/: README.md  make.sh  post-live.py  post.py  pre.py
current/haxe/for-distribution/java/: Example.java  build-example.sh
current/haxe/for-distribution/pypi/: README.md  midi_example.py  pyproject.toml  requirements.txt  setup.py  test_lib.py
current/haxe/for-distribution/pypi/goldenpond/: __init__.py
current/haxe/for-distribution/web-app/: index.html  midi-file.js  styles.css
current/haxe/src/: ChordThing.hx  TestGoldenPond.hx  TimedSequence.hx
current/haxe/src/goldenpond/: ChordFactory.hx  ChordParser.hx  ChordThing.hx  GoldenData.hx  GoldenPond.hx  Mode.hx  RhythmGenerator.hx  ScoreUtilities.hx  TestGoldenPond.hx  TestSuite1.hx  TestSuite2.hx  TimedSequence.hx  (+1 more)
current/js/: goldenpond.js  index.html
current/published/: goldenpond-livecoding.pyscript  goldenpond.pyscript
