[tool.poetry]
name = "goldenpond"
version = "0.5.0"
description = "A Python library for interpreting the GoldenPond DSLs for making musical chord progressions and rhythmic musical lines."
readme = "README.md"
authors = ["Phil Jones <interstar@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
